--- a/deck.mdx
+++ b/deck.mdx
@@ -46,7 +46,7 @@ import PaperSample from './components/paper'
   <Appear>
     <li><h2>Atributos de una propiedad</h2></li>
     <li><PaperSample title={''} content={'Poca liquidez'}/></li>
-    <li><h2>Comportamiento historico</h2></li>
+    <li><h2>Comportamiento histórico</h2></li>
     <li><PaperSample title={''} content={'El valor tiende a subir y desplomarse'}/></li>
   </Appear>
 </ul>
@@ -128,7 +128,7 @@ export default Split
     <li><PaperSample title={''} content={'Flip: comprar propiedades a bajo costo y vender a inversores (ES&L)'}/></li>
     <li><PaperSample title={''} content={'Deficiente supervisión por parte de inversores'}/></li>
     <li><PaperSample title={''} content={'Retiro de restricciones'}/></li>
-    <li><PaperSample title={''} content={'Construcción pagada con depositos garantizados por el gobierno'}/></li>
+    <li><PaperSample title={''} content={'Construcción pagada con depósitos garantizados por el gobierno'}/></li>
     <li><PaperSample title={''} content={'Intereses altos a ahorradores pagados por gobierno'}/></li>
   </Appear>
 </ul>
@@ -167,7 +167,7 @@ Noruega compró prestamos y perdio 100M, distancia lo hacia mas dificil, Memphis
 
 export default Split
 
-## Hipotesis y Alternativas
+## Hipótesis y Alternativas
 
 <ul style={{ listStyleType: 'none', padding: 0}}>
   <Appear>  
