--- a/deck.mdx
+++ b/deck.mdx
@@ -20,7 +20,7 @@ export default Split
 ### Hipotecados
 
 <hr />
-<PersonIcon /> Hortensia Juarez
+<PersonIcon /> Hortensia Juárez
 <br />
 <PersonIcon /> Erik Villa
 
@@ -28,19 +28,19 @@ export default Split
 import { Appear } from 'mdx-deck'
 import PaperSample from './components/paper' 
 
-## Que debo saber del mercado hipotecario?
+## Qué debo saber del mercado hipotecario?
 
 <ul style={{ listStyleType: 'none', padding: 0}}>
   <Appear>
     <li><h2>Valor</h2></li>
-    <li><PaperSample title={''} content={'Una propiedad puede ser usada como garantía para el prestamista al pedir un credito'}/></li>
+    <li><PaperSample title={''} content={'Una propiedad puede ser usada como garantía para el prestamista al pedir un crédito'}/></li>
     <li><PaperSample title={''} content={'El valor de una propiedad fluctua como cualquier otro instrumento del mercado de valores'}/></li>
   </Appear>
 </ul>
 
 ---
 
-## Que debo saber del mercado hipotecario?
+## Qué debo saber del mercado hipotecario?
 
 <ul style={{ listStyleType: 'none', padding: 0}}>
   <Appear>
@@ -59,7 +59,7 @@ import PaperSample from './components/paper'
 
 <div>
 Crisis de propiedad 
-(Gran Bretana, Siglo XIX)
+(Gran Bretaña, Siglo XIX)
 </div>
 
 export default Split
@@ -129,7 +129,7 @@ export default Split
     <li><PaperSample title={''} content={'Deficiente supervisión por parte de inversores'}/></li>
     <li><PaperSample title={''} content={'Retiro de restricciones'}/></li>
     <li><PaperSample title={''} content={'Construcción pagada con depósitos garantizados por el gobierno'}/></li>
-    <li><PaperSample title={''} content={'Intereses altos a ahorradores pagados por gobierno'}/></li>
+    <li><PaperSample title={''} content={'Altos intereses a ahorradores pagados por gobierno'}/></li>
   </Appear>
 </ul>
 
@@ -153,8 +153,8 @@ export default Split
 <ul style={{ listStyleType: 'none', padding: 0}}>
   <Appear>  
     <li><PaperSample title={''} content={'Créditos de alto riesgo en los cuales solo se pagan intereses'}/></li>
-    <li><PaperSample title={''} content={'Incremento de interes'}/></li>
-    <li><PaperSample title={''} content={'Securitizacion: Bancos avalan créditos con clasificación de seguridad y los revenden'}/></li>
+    <li><PaperSample title={''} content={'Incremento de interés'}/></li>
+    <li><PaperSample title={''} content={'Securitization: Bancos avalan créditos con clasificación de seguridad y los revenden'}/></li>
     <li><PaperSample title={''} content={'Dependencias: Intereses bajos, trabajo, incremento de valor de vivienda'}/></li>
   </Appear>
 </ul>
